Basic JPMS build working